# videoindex_eval_agent

./: Dockerfile  README.md  pyproject.toml
data/: longtvqa.yaml
src/: agent.py  server.py
