[project]
name = "videoindex-eval-agent"
version = "0.1.0"
description = "A2A agent for evaluating video Q&A responses using semantic similarity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "openai>=1.55.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
